fix: inline code not showing up
deps: update to latest

--- a/src/styles/layouts/blogPost.scss
+++ b/src/styles/layouts/blogPost.scss
@@ -161,11 +161,6 @@ article {
       padding: 0 1em;
     }
 
-    // Dirty fix to get rid of the extra line that is there for some reason
-    .line:last-child {
-      display: none;
-    }
-
     &,
     code {
       font-family: $code-font;
